# python-project-lvl4

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
fixtures/: Statuses.json  Tasks.json  Users.json
labels/: consts.py  forms.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_rename_creation_date_label_created_at.py  0003_alter_label_options.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: consts.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_options.py  0003_alter_status_options.py  0004_alter_status_options.py
task_manager/: admin.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: Labels.json  Users.json
task_manager/labels/: consts.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: consts.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: consts.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  delete_page.html  form.html  index.html  table.html
task_manager/tests/: conftest.py
task_manager/users/: consts.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/: consts.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_options.py  0003_alter_task_options.py  0004_alter_task_options.py
templates/task_manager/: base.html  index.html
users/: consts.py  forms.py  tests.py  urls.py  views.py
users/tests/: conftest.py  test_users.py
(+15 files in other folders)
